--- a/requests/Member.yaml
+++ b/requests/Member.yaml
@@ -3,6 +3,8 @@ MembershipSingle:
     summary: Membership - single
     description: Get a summary of a single membership record (a member record), use the /detail endpoint to get the full details
     operationId: getMemberSummary
+    tags:
+      - Membership
     parameters:
       $ref: 'shared.yaml#/parameters/split_member_uri'
     responses:
@@ -13,6 +15,8 @@ MembershipDetail:
     summary: Membership - single detail
     description: Get a summary of the membership details for a person, use the /all endpoint to get the full details
     operationId: getMemberDetail
+    tags:
+      - Membership
     parameters:
       $ref: 'shared.yaml#/parameters/split_member_uri'
     responses:
